@startuml

together {
    class FocusedBlockInfoProvider  {
        TryGetForcusedBlockInfo(out FocusedBlockInfo) : bool
    }

    class FocusedBlockInfo {
        blockType
        pivotCoordinate
        hitPoint
        hitNormal
    }
}

together {
    class FocusedBlockViewer {

    }

    class FocusedBlockOutline {
        SetMesh(BlockMesh)
    }
}

class BreakBlockHandler {

}

class PlaceBlockHandler {

}

FocusedBlockViewer --> FocusedBlockInfoProvider : 毎フレーム取得
FocusedBlockViewer --> FocusedBlockOutline

BreakBlockHandler --> FocusedBlockInfoProvider
PlaceBlockHandler --> FocusedBlockInfoProvider


@enduml